--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
 <title>Scavenger Hunt</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- index.html v1.1.1 | Restores cut-out PDF page | Baseline v1 preserved -->
-
 <style>
 body {
   font-family: system-ui, sans-serif;
   background: linear-gradient(180deg,#eef2f7,#f4f6f8);
   padding:20px;
 }
-
 .card {
   max-width:900px;
   margin:auto;
@@ -21,7 +18,6 @@ body {
   padding:24px;
   border-radius:14px;
 }
-
 button {
   padding:14px 20px;
   font-size:18px;
@@ -29,19 +25,16 @@ button {
   border:none;
   border-radius:10px;
 }
-
 button.primary {
   background:#2ecc71;
   color:white;
   margin-top:14px;
 }
-
 button.secondary {
   background:#2563eb;
   color:white;
   margin:12px 0 18px 0;
 }
-
 input {
   padding:14px;
   font-size:18px;
@@ -50,23 +43,19 @@ input {
   margin-top:14px;
   text-align:center;
 }
-
 .center { text-align:center; }
-
 .hunt-card {
   padding:16px;
   border-radius:12px;
   background:#f8fafc;
   margin-bottom:14px;
 }
-
 .search {
   width:100%;
   padding:12px;
   font-size:16px;
   margin:16px 0;
 }
-
 .overlay {
   position:fixed;
   inset:0;
@@ -81,7 +70,6 @@ input {
 .overlay.correct { background:rgba(0,160,0,0.85); }
 .overlay.wrong { background:rgba(200,0,0,0.85); }
 
-/* PRINT */
 .print-page { page-break-after:always; }
 .print-item { margin-bottom:20px; }
 .notes { border:1px dashed #aaa; height:40px; margin-top:6px; }
@@ -93,22 +81,17 @@ input {
 }
 .print-intro h1 { font-size:36px; margin-bottom:20px; }
 .print-intro p { font-size:18px; margin-bottom:20px; }
-.print-intro canvas { margin-top:20px; }
 
-/* CUT-OUT GRID */
 .cut-grid {
   display:grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns:repeat(2,1fr);
   gap:20px;
 }
 .cut-card {
-  border:1px dashed #333;
-  padding:12px;
+  border:1px dashed #aaa;
+  padding:14px;
+  border-radius:10px;
   text-align:center;
-  height:260px;
-  display:flex;
-  flex-direction:column;
-  justify-content:space-between;
 }
 
 @media print {
@@ -125,83 +108,10 @@ input {
 <div id="wrong" class="overlay wrong">❌ Try Again</div>
 
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+<script src="hunts-source.js"></script>
 
 <script>
-/* ================= IMMUTABLE STORE ================= */
-const STORE_KEY = "scavenger_hunts_store_v1";
-
-const BASE_HUNTS = [
-{
-  name:"Escape the House",
-  clues:[
-    ["I show your face but I’m not a photo. I hang on walls and doors. Where am I?","Mirror"],
-    ["I have pages but no homework. I’m quiet unless you drop me. I live where stories sleep.","Bookshelf"],
-    ["I open wide but never talk. I keep food safe and cold. Don’t forget to close me!","Fridge"],
-    ["I go round and round but never get dizzy. I clean but hate socks in pairs.","Washing Machine"],
-    ["I have hands but no arms. I never clap, but I’m always right on time.","Clock"],
-    ["I hide your feet when you’re not home. I like pairs, but I’m often missing one.","Shoe Rack"],
-    ["I’m soft, I’m comfy, and I steal naps. People sit on me 'just for a minute'.","Couch"],
-    ["I light up the dark but disappear by day. Flip me on.","Lamp"],
-    ["I’m full of secrets, but I don’t talk. You knock before opening me.","Bedroom Door"],
-    ["You cracked every lock! The final key is hidden where treasures are kept safe. Your Colour is RED","Red Ribbon"]
-  ]
-},
-{
-  name:"Fortnite IRL",
-  clues:[
-    ["You’ve dropped in. First loot location: Where controllers go when the game is off.","Gaming Desk"],
-    ["Shields up! Find the place where drinks recharge HP.","Fridge"],
-    ["Storm incoming 🌪️ Where do shoes hide when the storm hits outside?","Entrance"],
-    ["You need mats. Wood, brick, metal… Find where tools live.","Garage"],
-    ["Campfire deployed 🔥 Where the family gathers to chill.","Lounge Room"],
-    ["Inventory check. You can’t win without sleep.","Bed"],
-    ["Chest nearby… I hear it. Where secrets are stored behind closed doors.","Wardrobe"],
-    ["Reboot van activated ⚡ Where devices come back to life.","Phone Charger"],
-    ["High ground wins games. Go where you can see the whole room.","Stairs"],
-    ["Final circle. Only one remains. Where battles are watched, not played.","TV"],
-    ["One last challenge… Look where snacks disappear during long sessions.","Pantry"],
-    ["VICTORY ROYALE 🏆 Claim your reward where legends are made. Your colour is SILVER","Silver Ribbon"]
-  ]
-},
-{
-  name:"System Breach",
-  clues:[
-    ["SYSTEM ONLINE Begin at the device that controls all others.","Router"],
-    ["AUTHENTICATION REQUIRED Find where passwords are written but never stored digitally.","Notebook"],
-    ["DATA COLD STORAGE Files preserved at low temperature.","Fridge"],
-    ["INPUT DEVICE DETECTED Where commands are typed, not spoken.","Keyboard"],
-    ["PERIPHERAL FOUND One click can change everything.","Mouse"],
-    ["POWER SOURCE Without this, the system fails.","Power Board"],
-    ["CACHE CLEARED Where clothes are reset to default state.","Laundry"],
-    ["BACKUP LOCATION Where items are stored 'just in case'.","Garage"],
-    ["DISPLAY OUTPUT Pixels form reality here.","Monitor"],
-    ["SECURITY CHECKPOINT Entry requires permission.","Door"],
-    ["ENCRYPTED STORAGE Locked, hidden, not obvious.","Drawer"],
-    ["SYSTEM LOG Tracks everything that happens over time.","Clock"],
-    ["USER PROFILE Where the operator rests.","Bed"],
-    ["FINAL ACCESS NODE Only the admin reaches this point.","Desk"],
-    ["ROOT ACCESS GRANTED ACCESS GRANTED SYSTEM BREACHED Retrieve payload from secure location. Your colour is GREEN","Green Ribbon"]
-  ]
-}
-];
-
-function uid(){ return Math.random().toString(36).slice(2,9); }
-function code(){ return Math.floor(100000 + Math.random()*900000).toString(); }
-
-function loadStore(){
-  let data = JSON.parse(localStorage.getItem(STORE_KEY) || "null");
-  if(!data){
-    data = BASE_HUNTS.map(h=>({
-      id:uid(),
-      name:h.name,
-      steps:h.clues.map(c=>({ clue:c[0], location:c[1], code:code() }))
-    }));
-    localStorage.setItem(STORE_KEY, JSON.stringify(data));
-  }
-  return data;
-}
-
-const hunts = loadStore();
+const hunts = window.HUNT_SOURCE;
 const q = new URLSearchParams(location.search);
 const app = document.getElementById("app");
 
@@ -235,9 +145,7 @@ function startPage(id){
 <h1>🎉 Welcome, Explorer!</h1>
 <p><strong>${h.name}</strong></p>
 <p>You have been invited on a special scavenger hunt!</p>
-<ul style="text-align:left;display:inline-block">
-<li>Look carefully</li><li>Think smart</li><li>Scan a QR code</li><li>Type in a secret number</li>
-</ul>
+<p>Scan QR codes or enter the secret code to continue.</p>
 <button class="primary" onclick="location='?play=${id}&s=0'">▶️ Start the Hunt</button>
 </div>`;
 }
@@ -254,7 +162,8 @@ function play(){
   app.innerHTML = `
 <div class="center">
   <h2>${step.clue}</h2>
-  <input id="ans" placeholder="Enter 6-digit code">
+  <input id="ans" placeholder="Enter code">
+  <br>
   <button class="primary" onclick="check('${step.code}',${s})">Submit</button>
 </div>`;
 }
@@ -263,7 +172,7 @@ function check(c,s){
   const v=document.getElementById("ans").value.trim();
   if(v===c){
     show("correct");
-    setTimeout(()=>location='?play=' + q.get("play") + '&s=' + (s+1),900);
+    setTimeout(()=>location='?play='+q.get("play")+'&s='+(s+1),900);
   } else show("wrong");
 }
 
@@ -276,46 +185,47 @@ function show(id){
 /* ================= PRINT ================= */
 function printPage(id){
   const h = hunts.find(x=>x.id===id);
-  const startLink = location.origin + location.pathname + '?start=' + id;
+  const startURL = location.origin + location.pathname + '?start=' + id;
 
   app.innerHTML = `
 <div class="print-page print-intro">
   <h1>${h.name}</h1>
-  <p>Scan to start this scavenger hunt</p>
+  <p>Scan to begin the hunt</p>
   <canvas id="introQR"></canvas>
 </div>
 
 <div class="print-page">
-<h1>${h.name} – Parent Instructions</h1>
+<h2>${h.name} – Parent Instructions</h2>
 ${h.steps.map((s,i)=>`
   <div class="print-item">
     <strong>Clue ${i+1}:</strong> ${s.clue}<br>
     <strong>Location:</strong> ${s.location}<br>
-    <strong>Code:</strong> ${s.code}<br>
-    <canvas id="pqr${i}"></canvas>
-    <div class="notes"></div>
+    <strong>Code:</strong> ${s.code}
   </div>`).join("")}
 </div>
 
 <div class="print-page">
-<h2>Cut-Out QR Codes</h2>
+<h2>Cut-Out Cards</h2>
 <div class="cut-grid">
 ${h.steps.map((s,i)=>`
   <div class="cut-card">
-    <div><strong>${s.location}</strong></div>
-    <canvas id="cqr${i}"></canvas>
-    <div><strong>${s.code}</strong></div>
+    <strong>Clue ${i+1}</strong><br>
+    ${s.clue}<br><br>
+    Code: <strong>${s.code}</strong><br>
+    <canvas id="cutqr${i}"></canvas>
   </div>`).join("")}
 </div>
+</div>
+
 <button onclick="window.print()">Print</button>
 `;
 
-  QRCode.toCanvas(document.getElementById("introQR"), startLink, { width:260 });
+  QRCode.toCanvas(document.getElementById("introQR"), startURL, { width:260 });
   h.steps.forEach((s,i)=>{
-    QRCode.toCanvas(document.getElementById("pqr"+i), s.code, { width:120 });
-    QRCode.toCanvas(document.getElementById("cqr"+i), s.code, { width:120 });
+    QRCode.toCanvas(document.getElementById("cutqr"+i), s.code, { width:120 });
   });
 }
 </script>
+
 </body>
 </html>
