--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ body {
   background: linear-gradient(180deg,#eef2f7,#f4f6f8);
   padding:20px;
 }
+
 .card {
   max-width:900px;
   margin:auto;
@@ -18,6 +19,7 @@ body {
   padding:24px;
   border-radius:14px;
 }
+
 button {
   padding:14px 20px;
   font-size:18px;
@@ -25,16 +27,19 @@ button {
   border:none;
   border-radius:10px;
 }
+
 button.primary {
   background:#2ecc71;
   color:white;
   margin-top:14px;
 }
+
 button.secondary {
   background:#2563eb;
   color:white;
   margin:12px 0 18px 0;
 }
+
 input {
   padding:14px;
   font-size:18px;
@@ -43,19 +48,23 @@ input {
   margin-top:14px;
   text-align:center;
 }
+
 .center { text-align:center; }
+
 .hunt-card {
   padding:16px;
   border-radius:12px;
   background:#f8fafc;
   margin-bottom:14px;
 }
+
 .search {
   width:100%;
   padding:12px;
   font-size:16px;
   margin:16px 0;
 }
+
 .overlay {
   position:fixed;
   inset:0;
@@ -70,6 +79,7 @@ input {
 .overlay.correct { background:rgba(0,160,0,0.85); }
 .overlay.wrong { background:rgba(200,0,0,0.85); }
 
+/* PRINT */
 .print-page { page-break-after:always; }
 .print-item { margin-bottom:20px; }
 .notes { border:1px dashed #aaa; height:40px; margin-top:6px; }
@@ -79,8 +89,14 @@ input {
   text-align:center;
   margin-top:60px;
 }
-.print-intro h1 { font-size:36px; margin-bottom:20px; }
-.print-intro p { font-size:18px; margin-bottom:20px; }
+.print-intro h1 {
+  font-size:36px;
+  margin-bottom:20px;
+}
+.print-intro p {
+  font-size:18px;
+  margin-bottom:20px;
+}
 
 .cut-grid {
   display:grid;
@@ -111,6 +127,7 @@ input {
 <script src="hunts-source.js"></script>
 
 <script>
+/* ================= DATA ================= */
 const hunts = window.HUNT_SOURCE;
 const q = new URLSearchParams(location.search);
 const app = document.getElementById("app");
@@ -125,8 +142,13 @@ else home();
 function home(){
   app.innerHTML = `
     <h1>Scavenger Hunts</h1>
+
     <input class="search" placeholder="Search hunts...">
-    <button class="secondary" onclick="location='create-hunt.html'">➕ Create New Hunt</button>
+
+    <button class="secondary" onclick="location='create-hunt.html'">
+      ➕ Create New Hunt
+    </button>
+
     ${hunts.map(h=>`
       <div class="hunt-card">
         <strong>${h.name} (${h.steps.length} steps)</strong><br><br>
@@ -137,35 +159,52 @@ function home(){
   `;
 }
 
-/* ================= START ================= */
+/* ================= INTRO PAGE (RESTORED) ================= */
 function startPage(id){
   const h = hunts.find(x=>x.id===id);
   app.innerHTML = `
 <div class="center">
-<h1>🎉 Welcome, Explorer!</h1>
-<p><strong>${h.name}</strong></p>
-<p>You have been invited on a special scavenger hunt!</p>
-<p>Scan QR codes or enter the secret code to continue.</p>
-<button class="primary" onclick="location='?play=${id}&s=0'">▶️ Start the Hunt</button>
-</div>`;
+  <h1>🎉 Welcome, Explorer!</h1>
+  <p><strong>${h.name}</strong></p>
+
+  <p>
+    You have been invited on a special scavenger hunt!<br>
+    Around this place are hidden clues waiting to be found.
+  </p>
+
+  <ul style="text-align:left;display:inline-block">
+    <li>Look carefully</li>
+    <li>Think smart</li>
+    <li>Scan QR codes or</li>
+    <li>Enter the secret code</li>
+  </ul>
+
+  <p>When you’re ready…</p>
+
+  <button class="primary" onclick="location='?play=${id}&s=0'">
+    ▶️ Start the Hunt
+  </button>
+</div>
+`;
 }
 
 /* ================= PLAY ================= */
 function play(){
   const h = hunts.find(x=>x.id===q.get("play"));
   const s = parseInt(q.get("s"));
-  if(s>=h.steps.length){
+  if(s >= h.steps.length){
     app.innerHTML = `<h2 class="center">🎉 Hunt Complete!</h2>`;
     return;
   }
   const step = h.steps[s];
   app.innerHTML = `
 <div class="center">
-  <h2>${step.clue}</h2>
+  <h2 style="font-size:26px;font-weight:700">${step.clue}</h2>
   <input id="ans" placeholder="Enter code">
   <br>
   <button class="primary" onclick="check('${step.code}',${s})">Submit</button>
-</div>`;
+</div>
+`;
 }
 
 function check(c,s){
@@ -182,7 +221,7 @@ function show(id){
   setTimeout(()=>el.style.display="none",1000);
 }
 
-/* ================= PRINT ================= */
+/* ================= PRINT (RESTORED FORMAT) ================= */
 function printPage(id){
   const h = hunts.find(x=>x.id===id);
   const startURL = location.origin + location.pathname + '?start=' + id;
@@ -190,39 +229,52 @@ function printPage(id){
   app.innerHTML = `
 <div class="print-page print-intro">
   <h1>${h.name}</h1>
-  <p>Scan to begin the hunt</p>
+  <p>Welcome! Scan the QR code below to begin this scavenger hunt.</p>
+  <p><strong>Players:</strong> Scan to start</p>
   <canvas id="introQR"></canvas>
 </div>
 
 <div class="print-page">
-<h2>${h.name} – Parent Instructions</h2>
-${h.steps.map((s,i)=>`
-  <div class="print-item">
-    <strong>Clue ${i+1}:</strong> ${s.clue}<br>
-    <strong>Location:</strong> ${s.location}<br>
-    <strong>Code:</strong> ${s.code}
-  </div>`).join("")}
+  <h1>${h.name} – Parent Instructions</h1>
+  ${h.steps.map((s,i)=>`
+    <div class="print-item">
+      <strong>Clue ${i+1}:</strong> ${s.clue}<br>
+      <strong>Location:</strong> ${s.location}<br>
+      <strong>Code:</strong> ${s.code}
+      <div class="notes"></div>
+    </div>
+  `).join("")}
 </div>
 
 <div class="print-page">
-<h2>Cut-Out Cards</h2>
-<div class="cut-grid">
-${h.steps.map((s,i)=>`
-  <div class="cut-card">
-    <strong>Clue ${i+1}</strong><br>
-    ${s.clue}<br><br>
-    Code: <strong>${s.code}</strong><br>
-    <canvas id="cutqr${i}"></canvas>
-  </div>`).join("")}
-</div>
+  <h2>Cut-Out Cards</h2>
+  <div class="cut-grid">
+    ${h.steps.map((s,i)=>`
+      <div class="cut-card">
+        <strong>Clue ${i+1}</strong><br><br>
+        ${s.clue}<br><br>
+        Code: <strong>${s.code}</strong><br><br>
+        <canvas id="cutqr${i}"></canvas>
+      </div>
+    `).join("")}
+  </div>
 </div>
 
 <button onclick="window.print()">Print</button>
 `;
 
-  QRCode.toCanvas(document.getElementById("introQR"), startURL, { width:260 });
+  QRCode.toCanvas(
+    document.getElementById("introQR"),
+    startURL,
+    { width:260 }
+  );
+
   h.steps.forEach((s,i)=>{
-    QRCode.toCanvas(document.getElementById("cutqr"+i), s.code, { width:120 });
+    QRCode.toCanvas(
+      document.getElementById("cutqr"+i),
+      s.code,
+      { width:120 }
+    );
   });
 }
 </script>
